--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,14 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
+apply plugin: 'net.minecraftforge.gradle.forge'
+//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 repositories {
     maven {
         name 'DVS1 Maven FS'
         url 'http://dvs1.progwml6.com/files/maven'
     }
 }
-
-apply plugin: 'net.minecraftforge.gradle.forge'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-
 
 version = "0.0"
 group = "az.aztic" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -28,7 +26,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.11.2-13.20.1.2386"
+    version = "1.11.2-13.20.0.2282"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -61,8 +59,9 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    deobfCompile "slimeknights.mantle:Mantle:1.11.2-1.2.0.+"
-    deobfCompile "slimeknights:TConstruct:1.11.2-2.7.+"
+
+    deobfCompile "slimeknights.mantle:Mantle:1.11.2-1.2.0.27+"
+    deobfCompile "slimeknights:TConstruct:1.11.2-2.7.0.9+"
 }
 
 processResources {
