--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -16,17 +16,17 @@ repositories {
     }
 }
 
-version = "0.0"
-group = "az.aztic" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "AzTiC"
+version = "1.0"
+group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "modid"
 
-sourceCompatibility = targetCompatibility = "1.6" // Need this here so eclipse task generates correctly.
+sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
-    sourceCompatibility = targetCompatibility = "1.6"
+    sourceCompatibility = targetCompatibility = '1.8'
 }
 
 minecraft {
-    version = "1.11.2-13.20.0.2282"
+    version = "1.12-14.21.1.2410"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -34,7 +34,9 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20161220"
+
+    mappings = "snapshot_20170624"
+
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
@@ -60,8 +62,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-    deobfCompile "slimeknights.mantle:Mantle:1.11.2-1.2.0.27+"
-    deobfCompile "slimeknights:TConstruct:1.11.2-2.7.0.9+"
+    deobfCompile "slimeknights.mantle:Mantle:1.12-1.3.0.+"
+    deobfCompile "slimeknights:TConstruct:1.12-2.7.1.+"
 }
 
 processResources {
